@@ -1,0 +1,22 @@
+package com.ridegroup.yop.bean.order;
+
+public class CancelOrder {
+    private String info;
+    private int fee;
+
+    public String getInfo() {
+        return info;
+    }
+
+    public void setInfo(String info) {
+        this.info = info;
+    }
+
+    public int getFee() {
+        return fee;
+    }
+
+    public void setFee(int fee) {
+        this.fee = fee;
+    }
+}
